--- a/src/components/pages/Portfolio/portfolio.css
+++ b/src/components/pages/Portfolio/portfolio.css
@@ -1,3 +1,7 @@
+body {
+    background-image: url('../../../assets/images/background3.jpg');
+}
+
 .container {
     margin-top: 2em;
     margin-bottom: 2em;
